<?xml version="1.0" encoding="utf-8"?>
<resources>
      <string name="xtmc">系统名称: </string>
      <string name="xingh">*</string>
    <string name="kfdw">建设单位:</string>
    <string name="sydw">开发单位:</string>
    <string name="bbh">版本号:</string>
    <string name="banben">V2.2.1</string>
    <string name="xz">下载</string>
     <string name="glc">广州市城市信息研究所有限公司</string>
    <string name="gzcxs">广州市珠江提防管理处</string>
    <string name="app_name">广州市珠江堤防巡查系统 </string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="name">广州市珠江堤岸防护工程巡堤查险专题报告</string>
     <string name="jswzname">广州市珠江堤岸防护工程建设违章专题报告</string>
    <string name="bh">编号:</string>
   <string name="bgzt">一、报告主题</string>
   <string name="sj">时间:</string>
   <string name="ycqkmc">异常情况名称:</string>
   <string name="yzcd">严重程度:</string>
   <string name="ycqkbw">异常情况部位:</string>
   <string name="wz">二、位置</string>
   <string name="wz12">  </string>
   <string name="dlwz">地理位置:</string>
   <string name="ssxngc">所属项目工程:</string>
   <string name="tbzhfw">统编桩号范围:</string>
   <string name="gczhfw">工程桩号范围:</string>
   <string name="z">至</string>
   <string name="ycdddmjgxs">异常堤段断面结构形式:</string>
   <string name="ms">三、描述</string>
   <string name="yyfx">四、原因分析</string>
   <string name="jy">五、建议</string>
   <string name="next">下一页</string>
   <string name="xp">附：相片</string>
   <string name="xpsm">巡堤组长</string>
   <string name="carema">相机添加</string>
   <string name="localhost">相册添加</string>
   <string name="xp1">相片1</string>
    <string name="jssb">违章上报</string>
   <string name="xp2">相片2</string>
   <string name="xp3">相片3</string>
   <string name="xp4">相片4</string>
   <string name="xp5">相片5</string>
   <string name="tzbhjt">西左 8+044</string>
   <color name="col">#255</color><string name="del">删除</string>
   <string name="yl">预览</string>
   <string name="pz">拍照</string>
   <string name="fh">返回</string>
   <string name="save">保存</string>
   <string name="send">发送</string>
   <string name="zh">账号：</string>
   <string name="srzh">输入账号</string>
   <string name="mm">密码：</string>
   <string name="jzmm">记住密码</string>
   <string name="dl">登陆</string>
   <string name="cxtjsz">查询条件设置:</string>
   <string name="xzbh">选择位置:</string>
   <string name="xzbglx">选择报告类型:</string>
   <string name="xzsjfw">选择时间范围:</string>
  <string name="xzxcy">选择巡查员:</string>
   <string name="xzqy">选择区域:</string>
   <string name="xzhd">选择航道:</string>
   <string name="xzsj">选择时间</string>
   <string name="cx">查询</string>
   <string name="cxjg">查询结果</string>
    <string name="dw">定位</string>
   <string name="cxdw">查询定位</string>
   <string name="ip">服务器IP</string>
   <string name="duank">端口</string>
   <string name="setfwq">设置</string>
   <string name="settx">提醒设置</string>
   <string name="lsjlcx">历史查询</string>
    <string name="xxtz">消息通知</string>
   <string name="dtck">地图查看</string>
   <string name="xcsb">巡查上报</string>
   <string name="pzzz">拍照</string>
   <string name="gyxt">关于系统</string>
   <string name="xtsz">系统设置</string>
   <string name="zcd">主菜单</string>
   <string name="fkyj">反馈意见</string>
   <string name="more">详细属性</string>
   <string name="tc">退出系统</string>
   <string name="xj">新建报告</string>
   <color name="backcor">#000000</color>
   <color name="textcor">#155</color>
   <color name="txtcc">#000</color>
   <string name="tbzh">输入统编桩号</string>
   <string name="todo">TODO</string>
      <string name="tbzht">统编桩号:</string>
      <string name="wzt">位置:</string>
   <string name="hd">航道:</string>
   <string name="gj">管径:</string>
   <string name="ddjl">管顶离堤顶距离:</string>
   <string name="bz">备注:</string>
   <string name="psk">排水口</string>
   <string name="jtzh">西左1+590</string>
  <string name="wgbg">完工报告</string> 
</resources>
