<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:background="@drawable/back"  >
   
   <TextView android:layout_height="40dp"
       android:layout_width="140dp"
		 android:id="@+id/psk"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="center"
		android:text="@string/psk"
		/>
    <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="0dp"
       android:layout_marginTop="40dp"
		android:id="@+id/tbzht"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		android:text="@string/tbzht"
		/>
     <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="80dp"
       android:layout_marginTop="40dp"
		 android:id="@+id/tbzh"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		android:text="@string/jtzh"
		/>
      <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="0dp"
       android:layout_marginTop="60dp"
		android:id="@+id/wzt"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		android:text="@string/wzt"
		/>
     <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="80dp"
       android:layout_marginTop="60dp"
		 android:id="@+id/wz"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		
		/>
     <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="0dp"
       android:layout_marginTop="80dp"
		android:id="@+id/hdt"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		android:text="@string/hd"
		/>
     <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="80dp"
       android:layout_marginTop="80dp"
		 android:id="@+id/hd"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		
		/>
 <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="0dp"
       android:layout_marginTop="100dp"
		android:id="@+id/gjt"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		android:text="@string/gj"
		/>
     <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="80dp"
       android:layout_marginTop="100dp"
		 android:id="@+id/gj"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		
		/>
     <TextView android:layout_height="40dp"
       android:layout_width="80dp"
       android:layout_marginLeft="0dp"
       android:layout_marginTop="120dp"
		android:id="@+id/ddjlt"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		android:text="@string/ddjl"
		/>
     <TextView android:layout_height="40dp"
       android:layout_width="80dp"
       android:layout_marginLeft="80dp"
       android:layout_marginTop="120dp"
		 android:id="@+id/ddjl"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		
		/>
     <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="0dp"
       android:layout_marginTop="160dp"
		android:id="@+id/bzt"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		android:text="@string/bz"
		/>
     <TextView android:layout_height="20dp"
       android:layout_width="80dp"
       android:layout_marginLeft="80dp"
       android:layout_marginTop="160dp"
		 android:id="@+id/bz"
		android:textSize="16dip" android:textColor="#FF000000"
		android:gravity="left"
		
		/>
</RelativeLayout>